apply plugin: "java"

version '2.1'

sourceCompatibility = JavaVersion.VERSION_12

repositories{
    mavenCentral()
    maven{ url 'https://jitpack.io' }

}

ext{
    targetversion = 'v96'
    //targetversion = '-SNAPSHOT'
}

//compileJava {options.encoding = "UTF-8"}

dependencies{
    compileOnly "com.github.Anuken.Arc:arc-core:$targetversion"
    compileOnly "com.github.Anuken.Mindustry:core:$targetversion"

    compile group: 'org.json', name: 'json', version: '20190722'
    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.10.0.pr2'
    compile group: 'org.yaml', name: 'snakeyaml', version: '1.25'
    compile group: 'org.xerial', name: 'sqlite-jdbc', version: '3.28.0'
    compile group: 'org.apache.maven', name: 'maven-artifact', version: '3.0.3'
    compile 'com.google.code.gson:gson:2.8.5'
    //compile group: 'org.tensorflow', name:'tensorflow', version: '1.13.1'
}

jar{
    version = null
    from{
        configurations.runtimeClasspath.collect{it.isDirectory() ? it : zipTree(it)}
    }
}
